<resources>
    <string name="app_name">Inventory App, Stage 1</string>

    <string name="editor_activity_title">Add a new item</string>

    <string name="action_save">Save</string>

    <string name="category_product_name">Product</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_supplier_info">Supplier Info</string>

    <string name="hint_product_name">Product Name</string>

    <string name="hint_price">Price</string>

    <string name="hint_quantity">Quantity</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_phone_number">Supplier Phone Number</string>

    <string name="unit_product_price">$</string>
</resources>
